--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-ps-search-ui-sfdc",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "generator to serve CoveoPS folks with a nodejs module as development environment to interact with the Coveo JS Search UI framework",
   "repository": {
     "type": "git",
@@ -9,6 +9,7 @@
   "files": [
     "generators",
     "utils",
+    "routes",
     "app",
     "config",
     "typescript",
