--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -36,6 +36,8 @@
     "gulp-replace": "^0.5.4",
     "gulp-strip-comments": "^2.4.3",
     "gulp-concat": "^2.6.1",
+    "gulp-if": "^2.0.2",
+    "gulp-prompt": "^0.2.0",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
     "underscore": "^1.8.3",
