--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -38,6 +38,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-if": "^2.0.2",
     "gulp-prompt": "^0.2.0",
+    "gulp-unzip": "^0.2.0",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
     "underscore": "^1.8.3",
