gulp tasks to handle sfdc templates

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "gulp",
-    "dev": "gulp dev",
-    "deploy": "gulp bundle && gulp bundle-sfdc && gulp deploy-sfdc"
+    "dev": "gulp dev"
   },
   "keywords": [
     "coveo",
