ADD necessary files to support docker workflow with nginx, node and redis UPDATE gulp task ADD utils under typescript folder REMOVE unnecessary and/or deprecated module in package.json UPDATE readme.

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -18,9 +18,8 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
+    "connect-redis": "^3.3.3",
     "cookie-parser": "^1.4.3",
-    "coveo-search-ui": "2.x.x",
-    "detect-browser": "^1.10.0",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "express-session": "^1.15.2",
@@ -28,56 +27,61 @@
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "passport-saml": "^0.30.0",
-    "underscore": "^1.8.3",
-    "vhost": "^3.0.2"
+    "redis": "^2.8.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "colors": "^1.1.2",
-    "event-stream": "^3.3.4",
-    "gulp": "^3.9.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-streamify": "^1.0.2",
-    "gulp-util": "^3.0.8",
-    "gulp-zip": "^3.2.0",
-    "gulp-dom": "^0.9.17",
-    "gulp-rimraf": "^0.2.1",
-    "gulp-livereload": "^3.8.1",
-    "gulp-eol": "^0.1.2",
-    "gulp-shell": "^0.5.2",
-    "gulp-ejs": "^2.3.0",
-    "gulp-insert": "^0.5.0",
-    "gulp-replace": "^0.5.4",
-    "gulp-strip-comments": "^2.4.3",
-    "gulp-concat": "^2.6.1",
-    "gulp-if": "^2.0.2",
-    "gulp-prompt": "^0.2.0",
-    "gulp-unzip": "^0.2.0",
-    "require-dir": "^0.3.1",
-    "run-sequence": "^1.2.2",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^1.16.2",
-    "expand-brackets": "^2.1.4",
-    "pretty-typescript": "^1.14.0",
-    "merge-stream": "^1.0.1",
-    "ts-loader": "^2.0.3",
-    "typescript": "2.3.x",
+    "coveo-search-ui": "2.x.x",
     "eslint": "^3.1.1",
     "eslint-config-xo-space": "^0.15.0",
+    "event-stream": "^3.3.4",
+    "expand-brackets": "^2.1.4",
+    "fancy-log": "^1.3.2",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-coveralls": "^0.1.0",
+    "gulp-dom": "^0.9.17",
+    "gulp-ejs": "^2.3.0",
+    "gulp-eol": "^0.1.2",
     "gulp-eslint": "^3.0.1",
     "gulp-exclude-gitignore": "^1.0.0",
-    "gulp-line-ending-corrector": "^1.0.1",
+    "gulp-html-beautify": "^1.0.1",
+    "gulp-if": "^2.0.2",
+    "gulp-insert": "^0.5.0",
     "gulp-istanbul": "^1.0.0",
+    "gulp-line-ending-corrector": "^1.0.1",
+    "gulp-livereload": "^3.8.1",
     "gulp-mocha": "^3.0.1",
-    "gulp-plumber": "^1.0.0",
     "gulp-nsp": "^2.1.0",
-    "gulp-coveralls": "^0.1.0"
+    "gulp-plumber": "^1.0.0",
+    "gulp-prompt": "^0.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-rimraf": "^0.2.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-shell": "^0.5.2",
+    "gulp-streamify": "^1.0.2",
+    "gulp-strip-comments": "^2.4.3",
+    "gulp-unzip": "^0.2.0",
+    "gulp-zip": "^3.2.0",
+    "merge-stream": "^1.0.1",
+    "minimist": "^1.2.0",
+    "pretty-typescript": "^1.14.0",
+    "require-dir": "^0.3.1",
+    "run-sequence": "^1.2.2",
+    "ts-loader": "^2.0.3",
+    "typescript": "2.3.x",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
   },
   "scripts": {
     "build": "gulp",
     "dev": "gulp dev",
     "start": "node server.js",
-    "test": "gulp"
+    "deploy": "gulp && gulp sfdc && gulp deploySfdc",
+    "redis": "docker run --name <%- repoName %>-redis --rm -it -p 6379:6379 redis",
+    "search": "docker run --name <%- repoName %>-node --rm -it -p 3000:3000 <%- repoName %>"
   },
   "eslintConfig": {
     "extends": "xo-space",
