--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ node_js:
   - '9'
   - '8'
   - '6'
+os:
+  - osx
+  - linux
 after_success:
   - npm run travis-deploy-once "npm run semantic-release"
 branches:
