--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "scripts": {
     "commit": "git-cz",
+    "test": "echo 'running test...'",
     "semantic-release": "semantic-release",
     "travis-deploy-once": "travis-deploy-once"
   },
