--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "yosay": "^1.2.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^7.2.1",
+    "@commitlint/config-conventional": "^7.1.2",
     "@semantic-release/changelog": "^3.0.1",
     "@semantic-release/commit-analyzer": "^6.1.0",
     "@semantic-release/git": "^7.0.5",
@@ -53,10 +55,16 @@
     "commitizen": "^3.0.5",
     "conventional-recommended-bump": "^4.0.4",
     "cz-conventional-changelog": "^2.1.0",
+    "husky": "^1.2.0",
     "semantic-release": "^15.12.4",
     "semver": "^5.6.0",
     "standard-version": "^4.4.0",
     "travis-deploy-once": "^5.0.9"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }  
   },
   "scripts": {
     "commit": "git-cz",
